# ESP-Manager

./: .gitignore
default_app/: CMakeLists.txt
default_app/main/: CMakeLists.txt  default_app.c
esp_manager/: CMakeLists.txt  esp_manager.c
esp_manager/include/: esp_manager.h
esp_manager/lib/: config_update.c  firmware_update.c  mqtt.c  wifi.c
esp_manager/lib/include/: config_update.h  esp_manager_priv.h  firmware_update.h  mqtt.h  wifi.h
webapp/: .env  .env.dev  .env.prod  compose.override.yaml  compose.yaml  run.sh  start.sh
webapp/backend/: Dockerfile  package-lock.json  package.json
webapp/backend/data/default/: config-form.json  config-form.schema.json
webapp/backend/src/: index.js
webapp/backend/src/api/: index.js
webapp/backend/src/db/: index.js
webapp/backend/src/logic/: index.js
webapp/backend/src/mqtt/: index.js
webapp/backend/src/utils/: errors.js  limits.js
webapp/ca-bundle/: ca-bundle.crt
webapp/frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
webapp/frontend/src/: App.vue  main.js
webapp/frontend/src/api/: index.js
webapp/frontend/src/assets/: main.css
webapp/frontend/src/components/: Alert.vue  ConfigForm.vue  ConfigFormBlobInput.vue  (+29 more)
webapp/mqtt-broker/: Dockerfile  mosquitto.conf
webapp/mqtt-broker/certs/: broker.crt  broker.key
webapp/reverse-proxy/: Dockerfile
webapp/reverse-proxy/certs/: self-signed.crt  self-signed.key  server.crt  server.key
webapp/reverse-proxy/config/: dev.conf  prod.conf
webapp/shared/: index.js  package.json
webapp/shared/src/: index.js
(+43 files in other folders)
